fix: auth fixed

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,8 @@
   "extends": "airbnb-base",
   "rules": {
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "max-classes-per-file": "off"
+    "max-classes-per-file": "off",
+    "consistent-return": "off",
+    "func-names": "off"
  }
 }
