--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "consistent-return": "off",
     "func-names": "off",
     "object-curly-newline": "off",
-    "no-shadow": "off"
+    "no-shadow": "off",
+    "no-unused-vars": "off"
  }
 }
