--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,6 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "max-classes-per-file": "off",
-    "consistent-return": "off",
-    "func-names": "off",
-    "object-curly-newline": "off",
-    "no-shadow": "off",
-    "no-unused-vars": "off"
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
  }
 }
